<resources>
    <string name="app_name">Divertech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_arrow_description">Retour en arrière</string>
    <string name="Changement_Langue">Changement de langue</string>
    <string name="nameEventExemple">Evenement</string>
    <string name="buttonReturn">←</string>
    <string name="localisationEventExemple">50, Rue de Jilian Lubrat 20110 Propriano</string>
    <string name="bookParkingPlace">Réserver une place de parking</string>
    <string name="lopus">Lorem Ipsum Générer du texte d espace réservé Lorem Ipsum GENERATED LOREM IPSUM 10 PARAGRAPHES COPY Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis lectus nulla at volutpat diam. Sed viverra tellus in hac habitasse platea dictumst vestibulum. Risus in hendrerit gravida rutrum quisque non. Urna condimentum mattis pellentesque id. Nisi vitae suscipit tellus mauris a diam. Maecenas pharetra convallis posuere morbi leo urna molestie at. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Gravida quis blandit turpis cursus. Enim tortor at auctor urna. Adipiscing bibendum est ultricies integer quis auctor elit sed. Donec adipiscing tristique risus nec feugiat in. Habitant morbi tristique senectus et. Id leo in vitae turpis. Quisque egestas diam in arcu cursus euismod quis viverra nibh. Lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Ullamcorper sit amet risus nullam eget felis eget nunc. Ultrices eros in cursus turpis massa tincidunt dui ut. Est velit egestas dui id ornare. Euismod elementum nisi quis eleifend quam adipiscing vitae proin. Ut enim blandit volutpat maecenas. Lobortis feugiat vivamus at augue. Tempor orci dapibus ultrices in iaculis nunc sed augue lacus. Sed enim ut sem viverra aliquet eget sit. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Blandit libero volutpat sed cras. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Diam ut venenatis tellus in metus vulputate eu scelerisque. Vitae et leo duis ut diam. Ullamcorper morbi tincidunt ornare massa eget egestas. Tempor id eu nisl nunc mi. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Mattis rhoncus urna neque viverra justo nec. Posuere ac ut consequat semper. Euismod quis viverra nibh cras pulvinar mattis. Augue interdum velit euismod in pellentesque massa placerat duis ultricies. Feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Orci nulla pellentesque dignissim enim sit. Mattis molestie a iaculis at erat. Pulvinar proin gravida hendrerit lectus. Aenean et tortor at risus viverra adipiscing at in. Ornare suspendisse sed nisi lacus sed viverra tellus in hac. Cursus vitae congue mauris rhoncus aenean vel elit. Vestibulum rhoncus est pellentesque elit ullamcorper. Curabitur gravida arcu ac tortor dignissim convallis. Scelerisque mauris pellentesque pulvinar pellentesque. Sem nulla pharetra diam sit amet nisl suscipit. Gravida rutrum quisque non tellus orci ac. Hendrerit gravida rutrum quisque non tellus orci ac. In nisl nisi scelerisque eu ultrices vitae auctor. Vitae elementum curabitur vitae nunc sed velit dignissim sodales. Vitae ultricies leo integer malesuada. Massa id neque aliquam vestibulum. Nunc id cursus metus aliquam eleifend mi in nulla. Ipsum suspendisse ultrices gravida dictum fusce ut placerat. Ac tortor vitae purus faucibus ornare suspendisse sed. A scelerisque purus semper eget duis at tellus at. Vitae nunc sed velit dignissim. Fermentum odio eu feugiat pretium nibh ipsum. At imperdiet dui accumsan sit amet nulla facilisi. Mauris ultrices eros in cursus turpis massa tincidunt dui. Quis ipsum suspendisse ultrices gravida dictum fusce ut placerat orci. Placerat orci nulla pellentesque dignissim enim sit. In iaculis nunc sed augue lacus. Tincidunt praesent semper feugiat nibh sed pulvinar proin. Nibh venenatis cras sed felis eget velit aliquet. Lorem donec massa sapien faucibus et. Curabitur gravida arcu ac tortor dignissim convallis. Diam vulputate ut pharetra sit amet aliquam id. Iaculis at erat pellentesque adipiscing commodo elit. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Nisl tincidunt eget nullam non nisi est. Aenean et tortor at risus. Eu nisl nunc mi ipsum faucibus. Dui id ornare arcu odio ut sem nulla. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Porttitor rhoncus dolor purus non enim praesent elementum facilisis. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Malesuada pellentesque elit eget gravida. Ultricies integer quis auctor elit sed vulputate mi sit amet. Ultrices mi tempus imperdiet nulla. Ultrices eros in cursus turpis massa tincidunt. Sit amet venenatis urna cursus eget nunc scelerisque viverra. Dui accumsan sit amet nulla facilisi morbi. Volutpat sed cras ornare arcu dui vivamus arcu felis. Dignissim suspendisse in est ante. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Odio tempor orci dapibus ultrices in iaculis nunc sed. Adipiscing vitae proin sagittis nisl. Felis donec et odio pellentesque diam volutpat commodo sed. Id porta nibh venenatis cras. Lacus luctus accumsan tortor posuere ac ut consequat semper. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Ultricies lacus sed turpis tincidunt id aliquet risus. Massa placerat duis ultricies lacus sed. Nunc id cursus metus aliquam eleifend mi in nulla posuere. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Scelerisque purus semper eget duis at. Mi in nulla posuere sollicitudin aliquam ultrices sagittis. Sit amet consectetur adipiscing elit duis. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut placerat. Quis viverra nibh cras pulvinar mattis nunc sed. Sit amet purus gravida quis. Fermentum leo vel orci porta non pulvinar neque laoreet. Donec enim diam vulputate ut pharetra sit amet aliquam. Suspendisse faucibus interdum posuere lorem. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Eu sem integer vitae justo eget. Sit amet consectetur adipiscing elit. Vitae turpis massa sed elementum tempus egestas sed sed. Pellentesque adipiscing commodo elit at. Nulla facilisi nullam vehicula ipsum a arcu cursus. Nibh praesent tristique magna sit amet purus gravida. Condimentum vitae sapien pellentesque habitant morbi tristique. Risus quis varius quam quisque. Molestie at elementum eu facilisis sed. Lacus luctus accumsan tortor posuere. Suspendisse faucibus interdum posuere lorem ipsum dolor sit. Orci ac auctor augue mauris augue neque. Quis lectus nulla at volutpat diam ut venenatis tellus. Accumsan sit amet nulla facilisi morbi tempus iaculis urna id. Ac tortor dignissim convallis aenean et tortor. Egestas congue quisque egestas diam. Dolor magna eget est lorem ipsum. Imperdiet massa tincidunt nunc pulvinar sapien et. © 2015 — 2024 PRIVACY POLICY SITEMAP FONT GENERATOR IMAGES PLUGINS GENERATORS SHARE THE LOREM WA SAI</string>
    <string name="contact_phone">Contacter via\ntéléphone</string>
    <string name="contact_mail">Contacter via\nmail</string>
    <string name="close">Fermer la\ndemande</string>
    <string name="contact_admin">Contacter Administrateurs</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Se connecter</string>
    <string name="email">Email</string>
    <string name="inscription">Pas de compte ? S\'inscrire</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="adresse">Adresse</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="register">S\'inscrire</string>
    <string name="langue">Langue</string>
    <string name="admin_connection">Se connecter en tant qu\'Admin</string>
    <string name="mes_evenements">Mes évènements</string>
    <string name="r_servation_d_une_place_de_parking">Réservation d\'une place de parking</string>
    <string name="plaque_d_immatriculation">Plaque d\'immatriculation</string>
    <string name="envoyer_la_demande">Envoyer la demande</string>
    <string name="choisir_un_horaire">Choisir un horaire</string>
    <string name="selectionner_une_date">Selectionner une date</string>
    <string name="selectionner_une_heure_cr_neau_de_2h">Selectionner une heure \n(créneau de 2h)</string>
    <string name="address">Adresse</string>
    <string name="phone_number">Téléphone</string>
    <string name="language">Langue</string>
    <string name="modify">Modifier</string>
    <string-array name="languages">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string name="button_report">Signaler</string>
    <string name="hint_report">Entrer le signalement ici</string>
    <string name="button_objet">Envoyer</string>
    <string name="hint_object_lost">Entrer la description de l\'objet</string>
    <string name="button_contact">Envoyer</string>
    <string name="hint_contact">Entrer votre demande ici</string>
    <string name="lost_object">Objet Perdu</string>
    <string name="report_incident">Signalement</string>
    <string name="error_type_message">Veuillez choisir un type</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="event_picture">Event picture</string>
    <string name="description">Description</string>
    <string name="notification_type">Type de reservations</string>
    <string name="close_button">Close button</string>
    <string name="event_page">Page de l\'évènement</string>
    <string name="profile_picture">Profile picture</string>
    <string name="name_lastname">Nom Prénom</string>
    <string name="user_address">410 Avenue Roumanille, 06410 Biot</string>
    <string name="user_phone_number">0778651264</string>
    <string name="user_email">nom.prenom@gmail.com</string>
    <string name="user_language">Français</string>
    <string name="text_check">Valider</string>
    <string name="text_cancel">Annuler</string>
    <string name="short_description">Entrer ici une courte description</string>
    <string name="describe_event_hint">Décriver votre évènement ici :</string>
    <string name="dateExample">10 aout 2024 23h30</string>
    <string name="image_of_the_event">Image of the event</string>
    <string name="report_logo">Report logo</string>
    <string name="feed_admin_logo">feed admin logo</string>
</resources>