<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >

    <ImageView
        android:id="@+id/profile_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/profile_picture" />

    <ImageView
        android:id="@+id/return_arrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/return_arrow"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ReturnArrowDescription" />

    <TextView
        android:id="@+id/user_names"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:maxWidth="300dp"
        android:gravity="center"
        android:text="@string/name_lastname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_button"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/user_names"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/modify_button"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/user_names"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="visible"
                android:id="@+id/address_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/address"
                android:layout_height="wrap_content"
                android:layout_width="330dp"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/user_address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_title"
                />

            <TextView
                android:id="@+id/phone_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address"
                />

            <TextView
                android:id="@+id/phone_number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:text="@string/user_phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_title"
                />

            <TextView
                android:id="@+id/email_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number"
                />

            <TextView
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:text="@string/user_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_title"
                />

            <TextView
                android:id="@+id/language_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:text="@string/language"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                />

            <TextView
                android:id="@+id/language"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:text="@string/user_language"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_title"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/modify_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:text="@string/modify"
        android:textSize="25sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>