<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <fragment
        android:id="@+id/dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <fragment
        android:id="@+id/header_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:name="Si3.divertech.HeaderMenu"
        tools:layout="@layout/fragment_header_menu" />

    <!-- En tête -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/back"
        app:layout_constraintTop_toBottomOf="@+id/header_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/return_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/return_arrow"
        app:layout_constraintTop_toTopOf="@id/nameEvent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/nameEvent"
        android:contentDescription="@string/return_arrow_description" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/short_description"
        app:layout_constraintTop_toBottomOf="@id/nameEvent"
        app:layout_constraintBottom_toTopOf="@id/place_and_image"
        android:layout_margin="15dp"
        android:hint="@string/short_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <!-- Première partie -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place_and_image"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/short_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/localisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/localisationEventExemple"
            android:maxWidth="150dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/image_event"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/image_default"
            app:layout_constraintTop_toTopOf="@id/localisation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/localisation"
            android:contentDescription="@string/image_of_the_event" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateExample"
            android:maxWidth="300dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/localisation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- texte central -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bloc_cancel"
        app:layout_constraintTop_toBottomOf="@id/place_and_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fillViewport="true"
        android:layout_margin="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/describe_event_hint"
            android:textSize="15sp"
            android:gravity="start"
            app:layout_constraintBottom_toTopOf="@id/bloc_cancel"
            app:layout_constraintTop_toBottomOf="@id/localisation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.core.widget.NestedScrollView>

    <!-- boutons bas -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bloc_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/check_bloc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <ImageView
            android:id="@+id/logo_cancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cancel_text"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/report_logo" />

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/check_bloc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bloc_cancel"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/check_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/check"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_check"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/feed_admin_logo" />

        <TextView
            android:id="@+id/text_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_check"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>