<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxHeight="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners"
    android:id="@+id/notification_popup">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/close"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close_button" />

    <TextView
        android:id="@+id/notification_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/notification_type"
        app:layout_constraintBottom_toTopOf="@id/scrollview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="5dp"
        app:layout_constraintTop_toBottomOf="@id/notification_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/go_to_event">

        <TextView
            android:id="@+id/notification_description"
            android:labelFor="@id/code_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/description" />

    </ScrollView>


    <Button
        android:id="@+id/go_to_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/event_page"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>